added finish() in AddWorkitemActivity after adding workitem do database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailViewActivity"></activity>
+        <activity android:name=".AddWorkitemActivity"></activity>
     </application>
 
 </manifest>
