--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="se.rejjd.taskmanager">
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="se.rejjd.taskmanager">
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -11,17 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="se.rejjd.taskmanager.SignInActivity">
+        <activity android:name=".SignInActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeScreenActivity"></activity>
-        <activity android:name=".DetailViewActivity"></activity>
-        <activity android:name=".AddWorkitemActivity"></activity>
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".HomeScreenActivity" />
+        <activity android:name=".DetailViewActivity" />
+        <activity android:name=".AddWorkitemActivity" />
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".TeamUpdateActivity"></activity>
     </application>
 
 </manifest>
